[metadata]
name = IBLPy
version = 1.0.0-3
author = Rootspring
author_email = tor_needletail@outlook.com
description = IBLPy is a API Wrapper for Infinity Bots
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/cheesycod/IBLPy
project_urls =
    Bug Tracker = https://github.com/cheesycod/IBLPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = IBLPy
install_requires =
  requests
  importlib
  aiohttp
  aiohttp_requests

